updated ideas to add user image link
